Issue #2900766 by rubendello, anon: Not all autocomplete values are visible/clickable on smaller screens

--- a/css/linkit.autocomplete.css
+++ b/css/linkit.autocomplete.css
@@ -23,7 +23,7 @@
 
 /* Override the default jQuery UI theme */
 .linkit-ui-autocomplete {
-  max-height: 330px;
+  max-height: calc((100vh - 80px)/2);
   overflow: auto;
 }
 
